--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,29 +1,36 @@
-<div class="card-block">
-    <table class="table table-striped table-hover ">
-        <thead>
-            <tr>
-               <th class ="text-center">Name</th>
-               <th class ="text-center">Power</th>
-               <th class ="text-center">Stats(Strength)</th>
-               <th class ="text-center">Stats(Intelligence)</th>
-               <th class ="text-center">Stats(Stamina)</th>
-               <th class ="text-center">Update</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngfor="let entry of entries; let i = index">
-             <td class ="text-center">{{entry.name}}</td>
-             <td class ="text-center">{{entry.power}}</td>
-             <td class ="text-center">{{entry.strength}}</td>
-             <td class ="text-center">{{entry.intellegence}}</td>
-             <td class ="text-center">{{entry.strength}}</td>
-             <td class ="text-center">
-                 <button type="button" mat-icon-button color="primary" class="btn btn-outline-secondary btn-sm" click="">
-                     <mat-icon class="mat-18" svgicon="pencil">evolve</mat-icon>
-                 </button>
-             </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+<div>
+  <mat-table [dataSource]="dataSource" >
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let hero"> {{hero.name}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="power">
+      <mat-header-cell *matHeaderCellDef> Power </mat-header-cell>
+      <mat-cell *matCellDef="let hero"> {{hero.power}} </mat-cell>
+    </ng-container>
+    <!--<ng-container matColumnDef="phone">
+      <mat-header-cell *matHeaderCellDef> Stats(Strength) </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{hero.stat.key}} </mat-cell>
+    </ng-container>
+    
+    <ng-container matColumnDef="stats">
+      <mat-header-cell *matHeaderCellDef>StatsValue</mat-header-cell>
+      <mat-cell *matCellDef="let hero"> {{hero.stats[0].value}} </mat-cell>
+    </ng-container>-->
 
+    <ng-container matColumnDef="stats">
+      <mat-header-cell *matHeaderCellDef>Name value </mat-header-cell>
+      <mat-cell *matCellDef="let hero"> {{hero.stats[0].key}} : {{hero.stats[0].value}}  </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="evolveAction">
+      <mat-header-cell *matHeaderCellDef>Update</mat-header-cell>
+      <mat-cell *matCellDef="let hero">
+        <button mat-flat-button color="primary">Evolve</button>
+      </mat-cell>
+    </ng-container>
+    
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
