--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -7,4 +7,6 @@ frontend:
   <li>display the list on the frontend.</li>
   <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
 </ol>
-<router-outlet></router-outlet>
+
+Solution :
+<app-list></app-list>
