front end final commit with styling

--- a/FrontEnd/src/app/list-module/list/list.component.html
+++ b/FrontEnd/src/app/list-module/list/list.component.html
@@ -1,5 +1,10 @@
-<h2>Tour of Heroes</h2>
-<table style="width:100%">
+
+<!DOCTYPE html>
+<html ng-app>
+ 
+<h2 class="heading">Tour of Heroes</h2>
+<body>
+<table class="table">
   <tr>
     <th>Name</th>
     <th>Power</th>
@@ -8,12 +13,16 @@
     <th>Stat (stamina)</th>
     <th></th>
   </tr>
-  <tr *ngFor="let item of datasourceHeroes">
-    <td>{{item.name}}</td>
-    <td>{{item.power}}</td>
-    <td>{{item.stats[0].value}}</td>
-    <td>{{item.stats[1].value}}</td>
-    <td>{{item.stats[2].value}}</td>
-    <td><button class="btn btn-primary" (click)="evolveclick()">evolve</button></td>
-  </tr>
+    <tr class="{{lblclass}}" *ngFor="let item of datasourceHeroes">
+      <td >{{item.name}}</td>
+      <td >{{item.power}}</td>
+      <td >{{item.stats[0].value}}</td>
+      <td >{{item.stats[1].value}}</td>
+      <td >{{item.stats[2].value}}</td>
+      <td><button class="btn btn-primary" (click)="evolveclick()">evolve</button></td>
+    </tr>
+ 
 </table>
+</body>
+</html>
+
