--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,10 +1,26 @@
-frontend:
+<h2>Frontend Instructions</h2>
+<h4>Angular</h4>
 <ol>
   <li>create new service called 'api'</li>
   <li>add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
   <li>create new component named 'list'</li>
   <li>in the component, add the api service and get the list of contacts.</li>
   <li>display the list on the frontend.</li>
-  <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
+  <li> Columns: name, power, stat(strength), stat(intelligence), stat(stamina) </li>
+  <li> next to each hero should be an evolve button. </li>
+  <li> when the button is clicked, it should post the hero name and action to the relevant endpoint </li>
+  <li> display the updated stats above the table "Hero updated with Stats", replacing the name and the stats </li>
 </ol>
+<h4>CSS</h4>
+<ol>
+  <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
+  <li>Add a class called heading to the h2 tag</li>
+  <li>center the heading</li>
+  <li>set the color to blue</li>
+  <li>create 4 color related classes with different font weights and colors and backgrounds.</li>
+  <li>Add a random color class to the list of heroes</li>
+</ol>
+<hr>
+
+
 <router-outlet></router-outlet>
