updated evolve section

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>Frontend Instructions</h2>
+<!-- <h2>Frontend Instructions</h2>
 <h4>Angular</h4>
 <ol>
   <li>create new service called 'api'</li>
@@ -20,7 +20,7 @@
   <li>create 4 color related classes with different font weights and colors and backgrounds.</li>
   <li>Add a random color class to the list of heroes</li>
 </ol>
-<hr>
+<hr> -->
 
 
 <router-outlet></router-outlet>
