--- a/FrontEnd/src/app/components/list/list.component.html
+++ b/FrontEnd/src/app/components/list/list.component.html
@@ -1,6 +1,12 @@
 <div class="container">
   <h2 class="heading">Tour of the Heroes</h2>
-  <table>
+  <div *ngIf="selectedHero">
+    <p class="evolve-text">{{selectedHero.name}} updated with Stats </p>
+    <p class="evolve-text" *ngFor="let stat of selectedHero.stats">
+      {{stat.key}}: {{stat.value}}
+    </p>
+  </div>
+  <table *ngIf="!loading; else isLoading">
     <thead>
       <tr>
         <th scope="col">Name</th>
@@ -10,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr [class]="heroColor" *ngFor="let hero of heroes$ | async">
+      <tr [class]="heroColor" *ngFor="let hero of heroes">
         <td>{{hero.name}}</td>
         <td>{{hero.power}}</td>
         <td>
@@ -19,11 +25,13 @@
           </p>
         </td>
         <td>
-          <button (click)="onEvolveHeroeClick(hero, 'evolve')">Evolve</button>
+          <button class="evolve-button" (click)="onEvolveHeroeClick(hero, 'evolve')">Evolve</button>
         </td>
       </tr>
     </tbody>
   </table>
-
+  <ng-template #isLoading>
+    <p class="heading">Updating heroes</p>
+  </ng-template>
 
 </div>
