--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -2,7 +2,6 @@
     text-align: center;
     color: blue;
 }
-
 .blue{
     font-weight: bold;
     color: blue;
@@ -18,8 +17,8 @@
  color: orange;
  background-color:rgb(107, 104, 102) ;
 }
-.yellow{
+.green{
 font-weight: bold;
-color:yellow;
+color:green;
 background-color: rgb(105, 100, 100);
 }
