Finalise angular changes for test

--- a/FrontEnd/src/app/heroes-list/heroes-list.component.scss
+++ b/FrontEnd/src/app/heroes-list/heroes-list.component.scss
@@ -2,3 +2,23 @@
   text-align: center;
   color: #0000a3;
 }
+
+.random0{
+  color: #FF0000;
+  font-weight: 300;
+}
+
+.random1{
+  color:#00FF00;
+  font-weight: 500;
+}
+
+.random2{
+  color: #ffa500;
+  font-weight: 700;
+}
+
+.random3{
+  color: #6a0dad;
+  font-weight: 900;
+}
