--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -22,7 +22,7 @@
   color: navy;
   background-color: darkgrey !important;
   font-weight: bold;
-  font-size: large;
+  font-style:oblique;
 }
 
 .dark-blue-theme {
@@ -66,7 +66,6 @@ h2 {
 .responsive-table {
   li {
     border-radius: 3px;
-    padding: 25px 30px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
@@ -75,6 +74,7 @@ h2 {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
+    height: 50px;
   }
   .table-row {
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
@@ -140,4 +140,9 @@ h2 {
   border: solid 1px navy;
   border-radius: 10px;
   color: white;
+}
+
+.headerClass,.rowClass{
+  border:solid 1px;
+  padding: 10px;
 }
