--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -6,5 +6,8 @@ frontend:
   <li>in the component, add the api service and get the list of contacts.</li>
   <li>display the list on the frontend.</li>
   <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
+ 
 </ol>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-list></app-list>
+</div>
