--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -2,18 +2,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
 
-$heading-color:blue;
-$table-color:#DD354C;
-$table-active-color:#273747;
+// $heading-color:blue;
+// $table-color:#DD354C;
+// $table-active-color:#273747;
+
+// //h2 heading
+// .heading{
+//     text-align: center;
+//     color: $heading-color;
+  
+// }
+
+// // container
+// .container {
+//   margin: 0 auto;
+//   max-width: 48rem;
+//   width: 100%;
+//   font-family: 'Lato', sans-serif;
+// }
+
+// //table
+// .styled-table {
+// 	 border-collapse: collapse;
+// 	 margin: 25px 0;
+// 	 font-size: 0.9em;
+// 	 min-width: 400px;
+// 	 box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+//     text-align: center;
+// }
+
+// .styled-table thead tr {
+//     background-color: $table-color;
+//     color: #ffffff;
+//     text-align: center;
+  
+// }
+// .styled-table th{
+//   padding: 20px !important;
+// }
+// .styled-table td {
+//     padding:  1px;
+// }
+// .styled-table tbody tr {
+//     border-bottom: thin solid #dddddd;
+// }
+
+// .styled-table tbody tr:nth-of-type(even) {
+//     background-color: #f3f3f3;
+// }
+
+// .styled-table tbody tr:last-of-type {
+//     border-bottom: thin solid $table-active-color;
+// }
+// .styled-table tbody tr.active-row {
+//     font-weight: bold;
+//     color: $table-active-color;
+// }
+
+// //buttons
+// button{
+//   background:#8A8A8A;
+//   color:#fff;
+//   border:none;
+//   position:relative;
+//   height:60px;
+//   font-size:1.8em;
+//   padding:0 1em;
+//   cursor:pointer;
+//   transition:800ms ease all;
+//   outline:none;
+// }
+// button:hover{
+//   background:#fff;
+//   color:#8A8A8A;
+// }
+// button:before,button:after{
+//   content:'';
+//   position:absolute;
+//   top:0;
+//   right:0;
+//   height:2px;
+//   width:0;
+//   background: #8A8A8A;
+//   transition:400ms ease all;
+// }
+// button:after{
+//   right:inherit;
+//   top:inherit;
+//   left:0;
+//   bottom:0;
+// }
+// button:hover:before,button:hover:after{
+//   width:100%;
+//   transition:800ms ease all;
+// }
 
 //h2 heading
-.heading{
-    text-align: center;
-    color: $heading-color;
-  
+
+.heading {
+  text-align: center;
+  color: blue;
 }
 
 // container
+
 .container {
   margin: 0 auto;
   max-width: 48rem;
@@ -21,76 +113,98 @@ $table-active-color:#273747;
   font-family: 'Lato', sans-serif;
 }
 
-
 //table
-.styled-table {
-	 border-collapse: collapse;
-	 margin: 25px 0;
-	 font-size: 0.9em;
-	 min-width: 400px;
-	 box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    text-align: center;
-}
 
-.styled-table thead tr {
-    background-color: $table-color;
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  text-align: center;
+
+  thead tr {
+    background-color: red;
     color: #ffffff;
     text-align: center;
-}
-.styled-table th,
-.styled-table td {
-    padding: 15px 30px;
-}
-.styled-table tbody tr {
+  }
+
+  th {
+    padding: 20px !important;
+  }
+
+  td {
+    padding: 1px;
+  }
+
+  tbody tr {
     border-bottom: thin solid #dddddd;
+
+    &:nth-of-type(even) {
+      background-color: #f3f3f3;
+    }
+
+    &:last-of-type {
+      border-bottom: thin solid red;
+    }
+
+    &.active-row {
+      font-weight: bold;
+      color: red;
+    }
+  }
 }
 
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: thin solid $table-active-color;
-}
-.styled-table tbody tr.active-row {
-    font-weight: bold;
-    color: $table-active-color;
-}
 
 //buttons
-button{
-  background:#8A8A8A;
-  color:#fff;
-  border:none;
-  position:relative;
-  height:60px;
-  font-size:1.6em;
-  padding:0 1em;
-  cursor:pointer;
-  transition:800ms ease all;
-  outline:none;
-}
-button:hover{
-  background:#fff;
-  color:#8A8A8A;
-}
-button:before,button:after{
-  content:'';
-  position:absolute;
-  top:0;
-  right:0;
-  height:2px;
-  width:0;
+
+button {
   background: #8A8A8A;
-  transition:400ms ease all;
-}
-button:after{
-  right:inherit;
-  top:inherit;
-  left:0;
-  bottom:0;
-}
-button:hover:before,button:hover:after{
-  width:100%;
-  transition:800ms ease all;
+  color: #fff;
+  border: none;
+  position: relative;
+  height: 60px;
+  font-size: 1.8em;
+  padding: 0 1em;
+  cursor: pointer;
+  transition: 800ms ease all;
+  outline: none;
+
+  &:hover {
+    background: #fff;
+    color: #8A8A8A;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #8A8A8A;
+    transition: 400ms ease all;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #8A8A8A;
+    transition: 400ms ease all;
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
+  }
+
+  &:hover {
+    &:before, &:after {
+      width: 100%;
+      transition: 800ms ease all;
+    }
+  }
 }
