--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -12,7 +12,7 @@ body {
 .alert-success {
   border: 1px solid lightgreen;
   background-color: #90EE90;
-  color: white;
+  color: green;
   margin: 10px 0px;
   padding: 10px;
 }
