--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -5,7 +5,7 @@
     <li *ngFor="let stat of currentHero.stats">{{stat.key}}: <strong>{{stat.value}}</strong></li>
   </ul>
 </div>
-<table class="heroes green">
+<table class="heroes red">
   <tr>
     <th>
       name
