--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,10 +1,18 @@
-frontend:
-<ol>
-  <li>create new service called 'api'</li>
-  <li>add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
-  <li>create new component named 'list'</li>
-  <li>in the component, add the api service and get the list of contacts.</li>
-  <li>display the list on the frontend.</li>
-  <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
-</ol>
-<router-outlet></router-outlet>
+<h2 class="heading">Tour of Heroes</h2>
+<table cellpadding="15px" class="center-table">
+  <tr>
+    <th>Name</th>
+    <th>Power</th>
+    <th>Strength</th>
+    <th>Intelligence</th>
+    <th>Stamina</th>
+  </tr>
+  <tr *ngFor="let hero of heroes" [ngClass]="getCssClass()">
+    <td>{{ hero.name }}</td>
+    <td>{{ hero.power }}</td>
+    <td>{{ hero.stats[0].value }}</td>
+    <td>{{ hero.stats[1].value }}</td>
+    <td>{{ hero.stats[2].value }}</td>
+    <td><button (click) = "evolveHero(hero.name)">Evolve</button></td>
+  </tr>
+</table>
