--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+.heading {
+  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  font-weight: 900;
+  text-align: center;
+}
+
