--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,6 +1,5 @@
 <h2 class="heading">Tour of Heroes</h2>
-<div id="table_div">
-  <table>
+  <table class="center">
     <tr>
       <th>name</th>
       <th>power</th>
@@ -9,14 +8,12 @@
       <th>stat(stamina)</th>
       <th>Action</th>
     </tr>
-    <tr *ngFor="let item of heroList">
+    <tr *ngFor="let item of heroList ; let i = index" [ngClass]="listCSSClass[i]">
       <td>{{item.name}}</td>
       <td>{{item.power}}</td>
       <td>{{item.stats[0].value}}</td>
       <td>{{item.stats[1].value}}</td>
       <td>{{item.stats[2].value}}</td>
-      <td><button></button></td>
+      <td><button (click)="evolveEvent(item)">evolve</button></td>
     </tr>
   </table>
-
-</div>
