--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -11,7 +11,7 @@
     </tr>
   </table>
 </div>
-<table border="1" class="heroes black">
+<table class="hero whitescheme">
   <tr>
     <th>Name</th>
     <th>Power</th>
