--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -33,6 +33,7 @@
         <ng-container *ngIf="hero.expanded">
           <tr>
             <td colspan="4">
+              <h4 class="heading">Hero Stats</h4>
               <ul>
                 <li *ngFor="let stat of hero.stats">
                   <span style="padding-left: 12px"> {{stat.key}} : {{stat.value}} </span>
