--- a/FrontEnd/src/app/components/list/list.component.html
+++ b/FrontEnd/src/app/components/list/list.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="isVisible">
     <p><span class="power">{{hero.Name}}</span> updated with stats:</p>
-    <p>Stregth: <span class="strength">{{hero.Stats[0].Value}}</span></p>
+    <p>Strength: <span class="strength">{{hero.Stats[0].Value}}</span></p>
     <p>Intelligence: <span class="intelligence">{{hero.Stats[1].Value}}</span></p>
     <p>Stamina: <span class="stamina">{{hero.Stats[2].Value}}</span></p>
 </div>
