update list component with post to evolve

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -23,6 +23,6 @@
     <label class="flex-col">{{stat.value}}</label>
   </div>
   <div class="flex-col">
-    <input type="button" value="evolve"/>
+    <input type="button" value="evolve" (click)="evolve(hero)"/>
   </div>
 </div>
